Syncing services (#6)
* WIP

* WIP

* feat: Enhance scoring service and ml service fix

* fix: improve error handling in ML service, and update dependencies

* feat: update scoring and prediction fields in API documentation and models
